@@ -3,10 +3,10 @@ Section: debian-installer
 Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Joey Hess <joeyh@debian.org>, Martin Sjogren <sjogren@debian.org>, Petter Reinholdtsen <pere@debian.org>, Matt Kraai <kraai@debian.org>
-Build-Depends: debhelper (>= 4.1.13), dpkg-dev (>= 1.9), libdebconfclient0-dev (>= 0.47), libdebian-installer4-dev (>= 0.18), po-debconf (>= 0.5.0)
+Build-Depends: debhelper (>= 4.2), dpkg-dev (>= 1.9), libdebconfclient0-dev (>= 0.47), libdebian-installer4-dev (>= 0.18), po-debconf (>= 0.5.0)
 
 Package: main-menu
 Architecture: any
 Depends: ${shlibs:Depends}
 Description: Debian installer main menu
- This package provides a main menu for the debian installer.
+XC-Package-Type: udeb
