@@ -8,6 +8,9 @@ main-menu (0.057) UNRELEASED; urgency=low
   * Matt Kraai
     - Remove an unused variable.
   * Eugen Meshcheryakov : added Ukrainian translation (uk.po)
+  * Joey Hess
+    - Convert to using debhelper 4.2's udeb support.
+    - Update to debhelper v4 too.
 
  -- Christian Perrier <bubulle@debian.org>  Sun,  8 Feb 2004 20:26:39 +0100
 
