@@ -20,6 +20,9 @@ anna (0.049) UNRELEASED; urgency=low
   * h3li0s
     - Added Albanian translation (sq.po)
   * Eugen Meshcheryakov : added Ukrainian translation (uk.po)
+  * Joey Hess
+    - convert to debhelper v4
+    - use new debhelper udeb support
 
  -- Christian Perrier <bubulle@debian.org>  Sun,  8 Feb 2004 20:26:27 +0100
 
